# meta-agents

./: .env.example  .gitignore  AGENTS.md  AGENT_TOOLS_README.md  IMPLEMENTATION_GUIDE.md  README.md  S3_ENVIRONMENT_VARIABLES.md  USER_GUIDE_RU.md  ai_agents_report.md  arch.md  demo_agent_tools.py  error_correction.md  example_prompts.py  installation.md  new_tool.py  newt.md  newt2.md  otchet.md  otchet2.md  projecting.md  pyproject.toml  stage1.md  stage2.md  test_agent_capabilities.py  test_agent_prompt.py  test_agents_manual.py
DOCS/: S3_TOOL_ENV_VARS.md  S3_TOOL_INTEGRATION.md
agents/: coding_agent.yaml  critic_agent.yaml  dependency_analyzer.yaml  pattern_recognizer.yaml  planning_agent.yaml  research_agent.yaml  semantic_analyzer.yaml
config/: opencode.json  settings.yaml
docs/: PROGRAMMERS_RU.md  models.json  opencode2.json
docs2/: architecture_ru.md  integration_guide_ru.md  programmers_guide_ru.md  project_overview_ru.md  quick_start_ru.md  style_guide_ru.md
src/: __init__.py  agent_registry.py  api.py  cli.py  config.py  exceptions.py  orchestrator.py
src/analysis/: __init__.py
src/data/: __init__.py  cache.py  edges.py  graph.py  indices.py  nodes.py
src/events/: __init__.py
src/factories/: __init__.py  orchestrator_factory.py
src/interfaces/: __init__.py  agent_interface.py  backend_interface.py  model_interface.py  (+2 more)
tests/: conftest.py  test_agent_registry.py  test_analysis_agents.py  test_api.py  test_cli.py  test_config.py  test_integration.py  test_model_resolution.py  test_orchestrator.py  test_phase1_foundation.py  test_tools.py
(+37 files in other folders)
