[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "LangChain-based multi-agent orchestrator using DeepAgent"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Agent Orchestrator Team"}]
dependencies = [
    "deepagents>=0.3.0",
    "langchain>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-ollama>=0.1.0",
    "click>=8.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "watchdog>=3.0",
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "ipdb>=0.13",
]

[project.scripts]
orchestrate = "src.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
